--- a/board/src/App.css
+++ b/board/src/App.css
@@ -29,6 +29,58 @@ body {
 
 .card {
   margin: 15px;
-  width: 320px;
+  width: 420px;
+  height: 350px;
   background-color: aqua;
+  display: flex;
+  flex-direction: column;
+  border-radius: 15px;
+}
+
+.card img {
+  height: 60%;
+  object-fit: cover;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.card h3 {
+  margin: 10px;
+}
+.card p {
+  margin: 10px;
+  margin-top: 0px;
+}
+
+.card button {
+  border: none;
+  border-radius: 8px; 
+  padding: 10px 15px; 
+  background-color: #3498db;
+  color: #ffffff;
+  cursor: pointer; 
+  font-size: 14px;
+}
+
+/* Hover effect (optional) */
+.card button:hover {
+  background-color: #2980b9; /* Change background color on hover */
+}
+
+@media (min-width: 600px) {
+  .card {
+    width: 300px;
+    height: 400px;
+  }
+
+  .card img {
+    height: 65%;
+  }
+
+  .card p {
+    margin-bottom: 5px;
+  }
+  .card h3 {
+    margin-bottom: 5px;
+  }
 }
